login and registration

--- a/view/login.ejs
+++ b/view/login.ejs
@@ -13,8 +13,23 @@
         <input type="text" name="password" placeholder="Enter Password">
 
         <input type="submit" value="submit">
-    </form>
-    <a href="/register">Register</a>
+    </form><br>
+    <a href="/register">Register</a><br><br>
+    <!-- <button onclick="myFunction()">Price Calculator</button><br>
+    <div id="myDIV">
+        Click here to calculate price 
+        </div>
+
+<script>
+    function myFunction() {
+      var x = document.getElementById("myDIV");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+    </script> -->
     
 </body>
 </html>
