--- a/view/signup.ejs
+++ b/view/signup.ejs
@@ -11,8 +11,8 @@
 
     <form action="/register" method = "POST">
     <input type="text" name="name" placeholder="Enter your Username">
-    <input type="text" name="email" placeholder="Enter your email">
-    <input type="text" name="password" placeholder="Enter Your Password">
+    <input type="email" name="email" placeholder="Enter your email">
+    <input type="password" name="password" placeholder="Enter Your Password">
     <input type="submit" value="submit">
 </form>
 <a href="/login">Login</a>
