--- a/view/apiform.ejs
+++ b/view/apiform.ejs
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     
-    <title style="text-align:center;"> Price_Calculator</title>
+    <title style="text-align:center;"> Price Calculator</title>
 </head>
 <body >
-    <h1 style="text-align: center;">Price_Calculator</h1> 
-    <h2 style="color:dimgrey;">Hello</h2>
+    <button onclick="goBack()">Go Back</button><button style=" margin-left: 90%;" ><a href="/logout">Logout</a></button>
+    
+    <h1 style="text-align: center;">Price Calculator</h1> 
+   
 
-    <a href="/logout">Logout</a>
+    
 
     <form action="/post" method="POST">
     <!-- <form action="/price" method="POST"> -->
@@ -27,11 +29,14 @@
     <br><br>
     <h5>Choose Your Order Type <select name="orderType">
         <option value="1"selected>Order Type</option>
-        <option value="1">COD</option>
-            <option value="2">Prepaid</option>
+        <option  value="1">COD</option>
+            <option  value="2">Prepaid</option>                
+            
+           
             <option value="3">Reverse</option>
     </select></h5>
     <br>
+    
     <h4>Enter Dimension Of Package  <input type="text" name = "length" placeholder="length">
         <input type="text" name = "width" placeholder="width">
         <input type="text" name = "height" placeholder="height">
@@ -45,8 +50,28 @@
     
     
     <h4>Price Of The Package <button type="submit" >Get Price</button></h4>
+    
+        
+
+    <%if(data){%>
+        <ul> 
+            <%var keys = Object.keys(data.price)%>
+            <%for(let i=0;i<keys.length;i++){%>
+                <li> <%=keys[i]%> &nbsp; <%= data.price[keys[i]]%> </li>
+            <%}%>
+                
+        </ul>
+        
+    <%}%>
 
     </form>
+
+<script>
+    function goBack() {
+      window.history.back();
+    }
+    </script>
+    
 
 </body>
 </html>
