--- a/view/home.ejs
+++ b/view/home.ejs
@@ -7,8 +7,15 @@
     <title>HOME</title>
 </head>
 <body>
+    <button onclick="goBack()">Go Back</button><br><br>
     <a href="/logout">Logout</a>
     <h2>Welcome  <%= name %></h2>
+    
+<script>
+    function goBack() {
+      window.history.back();
+    }
+    </script>
     
 </body>
 </html>
