--- a/view/login.ejs
+++ b/view/login.ejs
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
-<body>
-    <h1>Login</h1>
+<body style="text-align: center; margin-top: 10%;">
+    <bold><h1 >Login </h1></bold>
     <form action="/login" method="POST">
-        <input type="text" name="email" placeholder="Enter email">
-        <input type="text" name="password" placeholder="Enter Password">
+        <h3>Enter Your Email  :       <input type="text" name="email" placeholder="Enter email"><br><br>
 
-        <input type="submit" value="submit">
+        </h3>
+        <h3>Enter Your Password  :      <input type="text" name="password" placeholder="Enter Password"><br>
+        </h3>
+        <br>
+        <input style="font-size: larger;" type="submit" value="submit">
     </form><br>
-    <a href="/register">Register</a><br><br>
+   <button><a style="font-size: larger;" href="/register">Register</a></button> <br><br>
   
     
 </body>
