--- a/view/price.ejs
+++ b/view/price.ejs
@@ -18,25 +18,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SELF DEVELOPED CALCULTOR</title>
 </head>
-<body style="background-color: #EEE;" > 
-    <h1 style="text-align: center;">SELF DEVELOPED CALCULATOR</h1><br>
-    <h2 style="color:dimgrey;">Hello</h2>
-    <a  href="/logout">Logout</a>
+<body style="background-color: #EEE;" >
 
+    <button onclick="goBack()">Go Back</button>    <button style=" margin-left: 90%;" ><a href="/logout">Logout</a></button>
+         
 
     
+       
+    <h1 style="text-align: center;">SELF DEVELOPED CALCULATOR</h1><br>
+    
+<br><br>
+   
+
+
     <form action="/price" method="POST">
         <h5>Pick Up Pin Code    <input type="text" name="sourcePin" placeholder="Source Pin"> Delivery Pin Code     <input type="text" name="destinationPin" placeholder="Destination Pin">
 
         </h5>
     <br>
-    <select name="orderType">
+    
+    <select  name="orderType">
         <!-- <option name = "orderType" value="Order Type">Order Type</option> -->
         <option name = "prepaid"  value="Prepaid">Prepaid</option>
         <option name = "cod" value="COD">COD</option>
         <option name = "reverse" value="Reverse">Reverse</option>
 
     </select>
+   
+      
+     
     <h5>Dimension(cm) <input type="number" name="length" placeholder="length" >
         <input type="number" name="width" placeholder = "width">
         <input type="number" name="height"  placeholder = "height"> Weight(kg) <input type="number" name="weight" placeholder = "weight" >
@@ -53,6 +63,14 @@
    
     <button type="submit">Get Price</button>
 
+    <%if(ans){%>
+        <ul>
+            <%for(let i=0;i<ans.length;i++){%>
+                <li> <%=ans[i]%> </li>
+            <%}%>
+        </ul>
+        
+    <%}%>
 
 </form><br><br>
 
@@ -507,6 +525,13 @@
 
         
 </table>
+
+<script>
+    function goBack() {
+      window.history.back();
+    }
+    </script>
+    
 
 </body>
 </html>
