--- a/view/apiform.ejs
+++ b/view/apiform.ejs
@@ -9,7 +9,7 @@
     <title style="text-align:center;"> Price Calculator</title>
 </head>
 <body >
-    <button onclick="goBack()">Go Back</button><button style=" margin-left: 90%;" ><a href="/logout">Logout</a></button>
+    <!-- <button onclick="goBack()">Go Back</button><button style=" margin-left: 90%;" ><a href="/logout">Logout</a></button> -->
     
     <h1 style="text-align: center;">Price Calculator</h1> 
    
@@ -67,13 +67,20 @@
     </form>
 
 <script>
-    function goBack() {
-      window.history.back();
-    }
+    // function goBack() {
+    //   window.history.back();
+    // }
     </script>
     
 
 </body>
 </html>
+
+
+
+
+
+
+
 
 
