--- a/view/apis.ejs
+++ b/view/apis.ejs
@@ -5,6 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {font-family: Arial;}
+        
+        /* Style the tab */
+        .tab {
+          overflow: hidden;
+          border: 1px solid #ccc;
+          background-color: #f1f1f1;
+        }
+        
+        /* Style the buttons inside the tab */
+        .tab button {
+          background-color: inherit;
+          float: left;
+          border: none;
+          outline: none;
+          cursor: pointer;
+          padding: 14px 16px;
+          transition: 0.3s;
+          font-size: 17px;
+        }
+        
+        /* Change background color of buttons on hover */
+        .tab button:hover {
+          background-color: #ddd;
+        }
+        
+        /* Create an active/current tablink class */
+        .tab button.active {
+          background-color: #ccc;
+        }
+        
+        /* Style the tab content */
+        .tabcontent {
+          display: none;
+          padding: 6px 12px;
+          border: 1px solid #ccc;
+          border-top: none;
+        }
+        </style>
+
 
 </head>
 <body>
@@ -14,21 +55,50 @@
     </div>
     <h2 style="text-align: center;">Welcome  <%= name %> </h2> <br>
     
+<div class = "tab">
+        <button class="tablinks" onclick="selfPrice()" > Self Developed Price Calculator</button>
 
-    <form action="/priceform" method="GET">
-  <button type="submit">SELF DEVELOPED</button></form><br><br>
+       <button  class="tablinks" onclick="shyplite()" type="submit">Shyplite Price Calculator</button>
+</div>
 
-   <form action="/apiform" method="GET">
-<button type="submit">SHYPLITE PRICE CALCULATOR</button>
-</form>
+<div id="self">
+<%- include('price'); %>
 
-
-
+    
+</div>
+<div id="shyplite">
+    <%- include('apiform')%>
+</div>
 <script>
     function goBack() {
       window.history.back();
     }
-    
+    document.getElementById("shyplite").style.display = "none";
+    document.getElementById("self").style.display = "none";
+
+    function selfPrice(){
+        console.log("111111111");
+        document.getElementById("shyplite").style.display = "none";
+        document.getElementById("self").style.display = "block";
+    }
+    function shyplite(){
+        document.getElementById("shyplite").style.display = "block";
+        document.getElementById("self").style.display = "none";
+    }
+    function openCalculator(evt, calculator) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(calculator).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
     </script>
 </body>
 </html>
