--- a/view/login.ejs
+++ b/view/login.ejs
@@ -9,10 +9,10 @@
 <body style="text-align: center; margin-top: 10%;">
     <bold><h1 >Login </h1></bold>
     <form action="/login" method="POST">
-        <h3>Enter Your Email  :       <input type="text" name="email" placeholder="Enter email"><br><br>
+        <h3>Enter Your Email  :       <input type="email" name="email" placeholder="Enter email"><br><br>
 
         </h3>
-        <h3>Enter Your Password  :      <input type="text" name="password" placeholder="Enter Password"><br>
+        <h3>Enter Your Password  :      <input type="password" name="password" placeholder="Enter Password"><br>
         </h3>
         <br>
         <input style="font-size: larger;" type="submit" value="submit">
