--- a/view/signup.ejs
+++ b/view/signup.ejs
@@ -14,7 +14,7 @@
         <h3>Enter Your Name    <input type="text" name="name" placeholder="Enter your Username">
         </h3>
     <h3>Enter Your Email <input type="email" name="email" placeholder="Enter your email"></h3>
-   <h3>Enter Your Password <input type="password-" name="password" placeholder="Enter Your Password"></h3> 
+   <h3>Enter Your Password <input type="password" name="password" placeholder="Enter Your Password"></h3> 
     <input style="font-size: larger;" type="submit" value="submit">
 </form><br><br>
 
