--- a/view/login.ejs
+++ b/view/login.ejs
@@ -9,16 +9,34 @@
 <body style="text-align: center; margin-top: 10%;">
     <bold><h1 >Login </h1></bold>
     <form action="/login" method="POST">
-        <h3>Enter Your Email  :       <input type="email" name="email" placeholder="Enter email"><br><br>
-
-        </h3>
-        <h3>Enter Your Password  :      <input type="password" name="password" placeholder="Enter Password"><br>
-        </h3>
+        <br>
+        <br>
+        <h3>Enter Your Email :       <input type="email" name="email" placeholder="Enter email"></h3>
+        
+       
+        <h3> Enter Your Password : <input type="password" name="password" placeholder="Enter Password" id="myInput"></h3>
+       <br>
+       <br>
+        <input type="checkbox" onclick="myFunction()">Show Password   
+        <br>
+        <br>
         <br>
         <input style="font-size: larger;" type="submit" value="submit">
     </form><br>
-   <button><a style="font-size: larger;" href="/register">Register</a></button> <br><br>
-  
+   <button><a style="font-size: larger;" href="/register">Register</a></button> 
+   <br>
+   <br>
+  <script>
+             
+        function myFunction() {
+  var x = document.getElementById("myInput");
+  if (x.type === "password") {
+    x.type = "text";
+  } else {
+    x.type = "password";
+  }
+}
+   </script>
     
 </body>
 </html>
