--- a/view/signup.ejs
+++ b/view/signup.ejs
@@ -11,20 +11,38 @@
     <h1 style="text-align: center;margin: 8%;">Register</h1>
 <div style="text-align: center; ">
     <form action="/register" method = "POST">
-        <h3>Enter Your Name    <input type="text" name="name" placeholder="Enter your Username">
+        <h3>Enter Your Name  :<input type="text" name="name" placeholder="Enter your Username">
         </h3>
-    <h3>Enter Your Email <input type="email" name="email" placeholder="Enter your email"></h3>
-   <h3>Enter Your Password <input type="password" name="password" placeholder="Enter Your Password"></h3> 
-    <input style="font-size: larger;" type="submit" value="submit">
-</form><br><br>
+    <h3>Enter Your Email :<input type="email" name="email" placeholder="Enter your email"></h3>
+   <h3> Enter Your Password : <input type="password" name="password" placeholder="Enter Password" id="myInput"></h3>
+   <br>
+   <br>
+    <input type="checkbox" onclick="myFunction()">Show Password
+    <br>
+    <br>
+    <br> 
+       <input style="font-size: larger;" type="submit" value="submit">
+</form>
+<br>
+<br>
 
-<button><a style="font-size: larger;"  href="/login">Login</a></button>
+<button><a style="font-size: larger;"  href="/login">Login</a>
+</button>
 </div>
 
 <script>
     function goBack() {
       window.history.back();
     }
+
+        function myFunction() {
+  var x = document.getElementById("myInput");
+  if (x.type === "password") {
+    x.type = "text";
+  } else {
+    x.type = "password";
+  }
+}
     </script>
     
     
