--- a/view/shypApiForm.ejs
+++ b/view/shypApiForm.ejs
@@ -16,7 +16,7 @@
 
     
 
-    <form action="/post" method="POST">
+    <form action="/apiCalculatedPrice" method="POST">
     
     <h4>Enter Source Code <input type="text" name = "sourcePin" placeholder="Enter Source Pin" >
     </h4>
@@ -51,11 +51,11 @@
     
         
 
-    <%if(data){%>
+    <%if(shypliteData){%>
        
-            <%var keys = Object.keys(data.price)%>
+            <%var keys = Object.keys(shypliteData.price)%>
             <%for(let i=0;i<keys.length;i++){%>
-                <li> <%=keys[i]%> &nbsp; <%= data.price[keys[i]]%> </li>
+                <li> <%=keys[i]%> &nbsp; <%= shypliteData.price[keys[i]]%> </li>
             <%}%>
                 
         
