--- a/view/compare.ejs
+++ b/view/compare.ejs
@@ -32,20 +32,40 @@
 </div>
 <h4>Price Of The Package <button type="submit" >Get Price</button></h4>
 
+<h3>Self Developed Price</h3>
+<%if(selfDevelopedAns){%>
+       
+    <%for(let i=0;i<selfDevelopedAns.length;i++){%>
+        <li> <%=selfDevelopedAns[i]%> </li>
+    <%}%>
 
-
-
-<%if(shypliteData && selfDevelopedAns){%>
+<h3>Shyplite Price</h3>
+<%}%>
+<%if(shypliteData){%>
        
     <%var keys = Object.keys(shypliteData.price)%>
-
-    <%for(let i=0;i < (keys.length && selfDevelopedAns.length) ; i++){%>
-        <li> <%=keys[i]%> &nbsp; <%= shypliteData.price[keys[i]]%>   &nbsp;   <%=selfDevelopedAns[i]%>  </li>
+    <%for(let i=0;i<keys.length;i++){%>
+        <li> <%=keys[i]%> &nbsp; <%= shypliteData.price[keys[i]]%> </li>
     <%}%>
         
 
 
 <%}%>
+
+<!-- 
+<%if(shypliteData && selfDevelopedAns){%>
+       
+    <%var keys = Object.keys(shypliteData.price)%>
+
+    <%for(let i=0;i < (keys.length && selfDevelopedAns.length) ; i++){%>
+        
+            <%=selfDevelopedAns[i]%> 
+        <br><br><%=keys[i]%> &nbsp; <%= shypliteData.price[keys[i]]%>  
+    <%}%>
+        
+
+
+<%}%> -->
 
 
 </form>
