--- a/view/selfCalculatedPrice.ejs
+++ b/view/selfCalculatedPrice.ejs
@@ -13,6 +13,23 @@
         text-align: center;
         padding: 4px ;
     }
+
+    #main{
+            width:100%;
+            height: 500px;
+            display: flex;
+            text-align: center;
+
+        }
+        .selfDeveloped{
+           margin: auto;
+            width: 700px;
+            height:500px;
+            justify-content: space-between;
+            display: flex;
+            text-align: center;
+
+        }
     </style>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,20 +73,40 @@
    <br><br>
 
    
-    <button type="submit">Get Price</button>
-
-    <%if(selfDevelopedAns){%>
-       
-           <%for(let i=0;i<selfDevelopedAns.length;i++){%>
-                <li> <%=selfDevelopedAns[i]%> </li>
-                <br>
-            <%}%>
-      
+    <button type="submit">Get Price</button><br><br><br>
+<div id = main>
+    <div class="selfDevloped">
+    <%if(selfDevelopedAns.length !=0){%>
+        <table style="margin-left: 500px;">
+           <tr>
+               <th>MODE</th>
+               <th>CARRIER</th>
+               <th>SELFDEVLOPED PRICE</th>
+           </tr>
         
-    <%}%>
+           <%for(let i=1;i<selfDevelopedAns.length;i++){%>
+        
+               
+           <%var str = selfDevelopedAns[i].split("-")%>
+               <%var mode = str[1].split(",")%>
+               <%var carrier = str[2].split(",")%>
+               <%var price = str[3];%>
+               <tr> 
+                   <th><%=mode[0]%></th>
+                   <th><%=carrier[0]%></th>
+                   <th><%=price%></th>
+               </tr>
+
+
+           <%}%>
+        </table>
+      <% }%>
+    </div>
+</div>
 
 
 </form><br><br>
+<br><br><br><br><br><br>
 <div id = "notIncluded">
     <div> HyperLocal </div>
     <table style="width:100%">
