--- a/view/shypApiForm.ejs
+++ b/view/shypApiForm.ejs
@@ -2,6 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+          table, th, td {
+          border:1px solid black;
+        }
+        #main{
+            width:100%;
+            height: 500px;
+            display: flex;
+            text-align: center;
+
+        }
+        .shyplite{
+            margin: auto;
+            width: 700px;
+            height:500px;
+            justify-content: space-between;
+            display: flex;
+            text-align: center;
+
+        }
+    </style>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -47,15 +68,28 @@
     <h4>Price Of The Package <button type="submit" >Get Price</button></h4>
     
         
+<div id = "main">
+    <div class = "shyplite">
 
-    <%if(shypliteData){%>
-       
-            <%var keys = Object.keys(shypliteData.price)%>
-            <%for(let i=0;i<keys.length;i++){%>
-                <li> <%=keys[i]%> &nbsp; <%= shypliteData.price[keys[i]]%> </li><br>
-            <%}%>
-       
-    <%}%>
+        <%if(shypliteData?.price ){%>
+            <table style="margin-left: 250px;">
+               <tr>
+                   <th>MODE</th>
+                   <th>Shyplite PRICE</th>
+               </tr>
+               <%var keys = Object.keys(shypliteData ? shypliteData["price"] : {})%>
+               <%for(let i=0;i<keys.length;i++){%>
+               <tr>
+                   <td><%=keys[i]%></td>
+                   <td><%=shypliteData.price[keys[i]]%></td>
+               </tr>
+            
+               <%}%>
+            </table>
+            <%}%> 
+    </div>
+
+</div>
 
     </form>
 
